--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Complete Bootstrap 4 Website Layout</title>
+	<title>Hi. Im Justin</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
@@ -95,7 +95,6 @@
 		</p>
 		<p>		In my spare time, you can find me hiking and cycling, while also snagging a picture or two along the way. Photography is also a lifelong passion of mine. If I'm not enjoying the beautiful California weather, im indoors cooking up a storm.
 		</p>
-		<p>It can also display the web page differently depending on the screen size or viewing device</p>
 		<br>
 		<a href="#" class="btn btn-primary">Learn More</a>
 	</div>
@@ -222,7 +221,7 @@
 </div>
 
 <!--- Two Column Section -->
-<div class="container-fluid padding">
+<!-- <div class="container-fluid padding">
 	<div class="row padding">
 		<div class="col-lg-6">
 			<h2>Our Philosophy</h2>
@@ -235,9 +234,8 @@
 		</div>
 	</div>
 	<hr class="my-4">
-	</div>
+	</div> -->
 	
-
 <!--- Connect -->
 <div class="container-fluid padding">
 <div class="row text-center padding">
@@ -263,26 +261,9 @@
 		<p>Justin.wai.97@gmail.com</p>
 		<p>Davis, CA, 95616</p>
 	</div>
-	<!-- <div class="col-md-4">
-		<hr class="light">
-		<h5>Our Hours</h5>
-		<hr class="light">
-		<p>Monday: 9am - 5pm</p>
-		<p>Saturday: 10am - 4pm</p>
-		<p>Sunday: closed</p>
-	</div> -->
-	<!-- <div class="col-md-4">
-		<hr class="light">
-		<h5>Service Area</h5>
-		<hr class="light">
-		<p>City, State, 00000</p>
-		<p>City, State, 00000</p>
-		<p>City, State, 00000</p>
-		<p>City, State, 00000</p>
-	</div> -->
 	<div class="col-12">
 		<hr class="light-100">
-		<h5>&copy;INSERT NEW WEB DOMAIN</h5>
+		<h5> https://jwaii.github.io/JustinWebsite/</h5>
 	</div>
 </div>	
 </div>	
