--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
 </div>
 </nav>
 	
+<p>TEST</p>
+
 <!-- Image Slider -->
 <div id="slides" class=" carousel slide" data-ride="carousel">
 <ul class="carousel-indicators">
