--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
 
 <!--- Welcome Section -->
-<div class="container-fluid padding">
+<div class="container-fluid padding fade">
 	<div class="row welcome text-center">
 		<div class="col-12">
 			<h1 class="display-4" id="about">About Me</h1>
@@ -92,7 +92,7 @@
 <!--- Two Column Section -->
 <div class="container-fluid padding">
 <div class="row padding">
-	<div class="col-lg-6">
+	<div class="col-lg-6 fade">
 		<p>		I recently graduated from Thinkful's Full Stack Flex bootcamp. Growing up, I found solving puzzles and building things with my hands to be a thrill, and I see coding in the same way. I've always loved tech, and now that I'm able to create code, I can finally see how things work in the background.
 		</p>
 		<p>		In my spare time, you can find me hiking and cycling, while also snagging a picture or two along the way. Photography is also a lifelong passion of mine. If I'm not enjoying the beautiful California weather, im indoors cooking up a storm.
@@ -111,7 +111,7 @@
 
 <!--- Welcome Section -->
 <div class="container-fluid padding">
-	<div class="row welcome text-center">
+	<div class="row welcome text-center fade">
 		<div class="col-12">
 			<h1 class="display-4" id="built">How I Built This.</h1>
 		</div>
@@ -123,7 +123,7 @@
 	</div>	
 
 <!--- Three Column Section -->
-<div class="container-fluid padding">
+<div class="container-fluid padding  fade">
 	<div class="row text-center padding">
 		<div class="col-xs-12 col-sm-6 col-md-4">
 			<i class="fas fa-code"></i>
@@ -175,7 +175,7 @@
 </div>
   
 <!--- Meet the team -->
-<div class="container-fluid padding">
+<div class="container-fluid padding  fade">
 <div class="row welcome text-center">
 	<div class="col-12">
 		<h1 class="diplay-4" id="hobbies">My Hobbies</h1>
@@ -191,8 +191,8 @@
 		<div class="card">
 			<img class="card-img-top" src="img-2/CameraStance.jpg">
 			<div class="card-body">
-				<h4 class="card-title">Photography</h4>
-				<p class="card-text">I picked up the hobby of Photography at a very young age because of my grandfather. When I was young he would perch me on his lap and show me gorgeous pictures from his travels around the world as well as from his daily morning walks. He showed me that you don’t have to go far in order to capture a beautiful moment.
+				<h4 class="card-title fade">Photography</h4>
+				<p class="card-text fade">I picked up the hobby of Photography at a very young age because of my grandfather. When I was young he would perch me on his lap and show me gorgeous pictures from his travels around the world as well as from his daily morning walks. He showed me that you don’t have to go far in order to capture a beautiful moment.
 				</p>
 				<a href="#" class="btn btn-outline-secondary">See my work</a>
 			</div>
@@ -202,8 +202,8 @@
 		<div class="card">
 			<img class="card-img-top" src="img-2/CookingIMG.jpeg">
 			<div class="card-body">
-				<h4 class="card-title">Cooking</h4>
-				<p class="card-text">My passion for cooking developed in the later years of Undergrad. I remember how sad my meals were before picking up the spatula and frying pan, and I'm so glad that I did. Within the span of 3 years I went from making microwaved baked potatoes to going down the list of countries to hone my skills at making their unique cuisines.</p>
+				<h4 class="card-title fade">Cooking</h4>
+				<p class="card-text fade">My passion for cooking developed in the later years of Undergrad. I remember how sad my meals were before picking up the spatula and frying pan, and I'm so glad that I did. Within the span of 3 years I went from making microwaved baked potatoes to going down the list of countries to hone my skills at making their unique cuisines.</p>
 				<a href="#" class="btn btn-outline-secondary">See Profile</a>
 			</div>
 		</div>
@@ -212,8 +212,8 @@
 		<div class="card">
 			<img class="card-img-top" src="img-2/TechIMG.jpg">
 			<div class="card-body">
-				<h4 class="card-title">Tech</h4>
-				<p class="card-text">Wrowing up in the sweetspot of inovation, I grew up witnessing the development of the revolutionary flat screen tv, DVD, iPod, iPhone, smart watch, the death of the land-line for the birth of everything mobile.</p>
+				<h4 class="card-title fade">Tech</h4>
+				<p class="card-text fade">Growing up in the sweetspot of inovation, I grew up witnessing the development of the revolutionary flat screen tv, DVD, iPod, iPhone, smart watch, the death of the land-line for the birth of everything mobile.</p>
 				<a href="#" class="btn btn-outline-secondary">See Profile</a>
 			</div>
 		</div>
@@ -241,10 +241,10 @@
 <!--- Connect -->
 <div class="container-fluid padding">
 <div class="row text-center padding">
-	<div class="col-12">
+	<div class="col-12 fade">
 		<h2 id="connect">Connect</h2>
 	</div>
-	<div class="col-12 social padding">
+	<div class="col-12 social padding fade">
 		<a href="https://github.com/jwaii"target="_blank" class="resumeicon"><i class="fab fa-github"></i></a>
 		<a href="https://linkedin.com/in/justindwai/"target="_blank" class="resumeicon"><i class="fab fa-linkedin"></i></a>
 		<a href="mailto:justin.wai.97@gmail.com" class="resumeicon"><i class="far fa-envelope"></i></a>
