gif update/ delete buttons

--- a/index.html
+++ b/index.html
@@ -10,13 +10,16 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 	<script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
 	<link href="style.css" rel="stylesheet">
+	<style> html {
+		scroll-behavior: smooth;
+		}
+	</style>	
 </head>
 <body>
 
 <!-- Navigation -->
 <nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
 <div class="container-fluid">
-	<a class="navbar-brand" href="#"><img src="img/logo.png"></a>
 	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
 		<span class="navbar-toggler-icon"></span>
 	</button>
@@ -41,7 +44,6 @@
 </div>
 </nav>
 	
-<p>TEST</p>
 
 <!-- Image Slider -->
 <div id="slides" class=" carousel slide" data-ride="carousel">
@@ -98,7 +100,6 @@
 		<p>		In my spare time, you can find me hiking and cycling, while also snagging a picture or two along the way. Photography is also a lifelong passion of mine. If I'm not enjoying the beautiful California weather, im indoors cooking up a storm.
 		</p>
 		<br>
-		<a href="#" class="btn btn-primary">Learn More</a>
 	</div>
 	<div class="col-lg-6">
 		<img src="img-2/about1.jpg" class="img-fluid">
@@ -165,10 +166,10 @@
 		<img class="gif" src="img/gif/poo.gif">
 	</div>
 	<div class="col-sm-6 col-md-3">
-		<img class="gif" src="img/gif/unicorn.gif">
+		<img class="gif" src="img/gif/flydog.gif">
 	</div>
 	<div class="col-sm-6 col-md-3">
-		<img class="gif" src="img/gif/chicken.gif">
+		<img class="gif" src="img/gif/corgi.gif">
 	</div>
 </div>
 </div>
@@ -194,7 +195,7 @@
 				<h4 class="card-title fade">Photography</h4>
 				<p class="card-text fade">I picked up the hobby of Photography at a very young age because of my grandfather. When I was young he would perch me on his lap and show me gorgeous pictures from his travels around the world as well as from his daily morning walks. He showed me that you don’t have to go far in order to capture a beautiful moment.
 				</p>
-				<a href="#" class="btn btn-outline-secondary">See my work</a>
+				<!-- <a href="#" class="btn btn-outline-secondary">See my work</a> -->
 			</div>
 		</div>
 	</div>
@@ -204,7 +205,7 @@
 			<div class="card-body">
 				<h4 class="card-title fade">Cooking</h4>
 				<p class="card-text fade">My passion for cooking developed in the later years of Undergrad. I remember how sad my meals were before picking up the spatula and frying pan, and I'm so glad that I did. Within the span of 3 years I went from making microwaved baked potatoes to going down the list of countries to hone my skills at making their unique cuisines.</p>
-				<a href="#" class="btn btn-outline-secondary">See Profile</a>
+				<!-- <a href="#" class="btn btn-outline-secondary">See Profile</a> -->
 			</div>
 		</div>
 	</div>
@@ -214,7 +215,7 @@
 			<div class="card-body">
 				<h4 class="card-title fade">Tech</h4>
 				<p class="card-text fade">Growing up in the sweetspot of inovation, I grew up witnessing the development of the revolutionary flat screen tv, DVD, iPod, iPhone, smart watch, the death of the land-line for the birth of everything mobile.</p>
-				<a href="#" class="btn btn-outline-secondary">See Profile</a>
+				<!-- <a href="#" class="btn btn-outline-secondary">See Profile</a> -->
 			</div>
 		</div>
 	</div>
@@ -222,21 +223,6 @@
 
 </div>
 
-<!--- Two Column Section -->
-<!-- <div class="container-fluid padding">
-	<div class="row padding">
-		<div class="col-lg-6">
-			<h2>Our Philosophy</h2>
-			<p>We know the greatness in a disuptive era requires bold ambition, curious talent and a culture that believes we're smarter together</p>
-			<p>We approach every challenge holistically, with best-in-class expertise in data, creativity, media, technology, search, social, and more. We call this Alchemy. It has the power to build ouor clients brands and transform their buisness. And while it may seem like magic, we've got it down to a sciemce</p>
-		<br>
-		</div>
-		<div class="col-lg-6">
-			<img src="img/bootstrap2.png" class="img-fluid">
-		</div>
-	</div>
-	<hr class="my-4">
-	</div> -->
 	
 <!--- Connect -->
 <div class="container-fluid padding">
@@ -265,7 +251,7 @@
 	</div>
 	<div class="col-12">
 		<hr class="light-100">
-		<h5> https://jwaii.github.io/JustinWebsite/</h5>
+		<h5> https://jwaii.github.io</h5>
 	</div>
 </div>	
 </div>	
